Styling of nav bar and hero section

--- a/index.html
+++ b/index.html
@@ -21,17 +21,31 @@
         </ul>
       </div>
       <div class="hero-banner">
-        <h1>Buy your shoes here!</h1>
-        <p>
-          At display, we have the Nike shoes air 2000 from our brand new
-          collection. To get notified for future collections consider
-          subscribing to our newletter!
-        </p>
-        <button id="hero-button">Sign Up</button>
-        <img
-          src="images/hero-image.jpg"
-          alt="Nike shoes on glowing background"
-        />
+        <div class="hero-content">
+          <div class="hero-text">
+            <h1>Buy your shoes here!</h1>
+            <p>
+              At display, we have the Nike shoes air 2000 from our brand new
+              collection. To get notified for future collections consider
+              subscribing to our newletter!
+            </p>
+          </div>
+          <div class="newsletter">
+            <input
+              type="text"
+              name="newsletter"
+              placeholder="Type your email adress"
+              id="email"
+            />
+            <button id="hero-button">Sign Up</button>
+          </div>
+        </div>
+        <div class="hero-image">
+          <img
+            src="images/hero-image.jpg"
+            alt="Nike shoes on glowing background"
+          />
+        </div>
       </div>
     </div>
   </body>
