Done with project, i.e. section two, three, four and the footer
I forgot to further commit the project but... It is almost done. Things to improve:
* add description to the other three products
* fix the logo of the page
* fix the title shown in the browser.

--- a/index.html
+++ b/index.html
@@ -48,5 +48,76 @@
         </div>
       </div>
     </div>
+    <div class="section-two">
+      <h2>Trending This Week</h2>
+      <div class="shoes-main">
+        <div class="shoe">
+          <img src="images/wohf5k8sjdmgogckoczk.webp" alt="" />
+          <div class="shoe-description">
+            <div class="shoe-type">
+              <p>Air Jordan 1 Mid</p>
+              <p>Shoes</p>
+            </div>
+            <div class="shoe-price">BGN 259.99</div>
+          </div>
+        </div>
+        <div class="shoe">
+          <img src="images/u6w7hqga4172ieosf48b.webp" alt="" />
+          <div class="shoe-description">
+            <div class="shoe-type">
+              <p>type of shoe</p>
+              <p>gender for the shoe</p>
+            </div>
+            <div class="shoe-price">price</div>
+          </div>
+        </div>
+        <div class="shoe">
+          <img src="images/4f37fca8-6bce-43e7-ad07-f57ae3c13142.webp" alt="" />
+          <div class="shoe-description">
+            <div class="shoe-type">
+              <p>type of shoe</p>
+              <p>gender for the shoe</p>
+            </div>
+            <div class="shoe-price">price</div>
+          </div>
+        </div>
+        <div class="shoe">
+          <img src="images/4704ba44-0d65-41dc-bd5b-57bfcf5f7b14.webp" alt="" />
+          <div class="shoe-description">
+            <div class="shoe-type">
+              <p>type of shoe</p>
+              <p>gender for the shoe</p>
+            </div>
+            <div class="shoe-price">price</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section-three">
+      <blockquote>
+        <p>
+          The only one who can tell you “You can’t” is you. And you don’t have
+          to listen.
+        </p>
+        <figure>
+      </blockquote>
+      <figcaption><cite>-NIKE</cite></figcaption>
+      </figure>
+    </div>
+    <div class="section-four">
+        <div class="card">
+            <div class="card-content">
+                <h3>Sign up to our Newsletter!</h3>
+                <p>Get notification about upcoming discounts and stay up to date with the newest collections.</p>
+            </div>
+            <div class="card-button">
+                <button>Sign up</button>
+            </div>
+        </div>
+
+    </div>
+    <div class="footer">
+        <p>Copyright &#169; The Odin Project 2023</p>
+    </div>
   </body>
 </html>
